# carbon-intelligence

./: .gitignore  README.md
backend/: package.json
backend/Capstone-backend/: .bandit  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .pre-commit-config.yaml  Makefile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  start_backend.sh
backend/Capstone-backend/.github/workflows/: cd-production.yml  cd-staging.yml  ci-minimal.yml  ci.yml  release.yml  security-scan.yml
backend/Capstone-backend/app/: __init__.py
backend/Capstone-backend/app/api/: inference_service.py  main.py
backend/Capstone-backend/app/core/: __init__.py  anonymization.py  auth.py  config.py  encryption.py  gdpr_compliance.py  interfaces.py  logging.py  security_manager.py
backend/Capstone-backend/app/data/: __init__.py  cross_validation.py
backend/Capstone-backend/app/explainability/: __init__.py  config.py  explanation_service.py  shap_explainer.py  utils.py
backend/Capstone-backend/app/federated/: __init__.py  aggregation.py  client.py  config.py  server.py  utils.py
backend/Capstone-backend/app/models/: __init__.py  runtime_credit_model.py
backend/Capstone-backend/app/services/: bias_detector.py  bias_mitigation.py  compliance_documentation.py  ingestion.py  regulatory_compliance.py
backend/Capstone-backend/app/sustainability/: Bank_data.csv  __init__.py  carbon_aware_nas.py  carbon_aware_optimizer.py  carbon_calculator.py  carbon_objective.py  energy_tracker.py  execution_policy.py  german_data.csv  inference_cost.py  logistic_regression.py  metrics.py  mlp.py  performance_constraints.py  plot_pareto.py  precision_cast.py  precision_modes.py  precision_policy.py  preprocessing.py  preprocessing_german.py  reference_model.py  research_table.py  results.py  run_nas.py  run_nas_german.py  scalable_mlp.py  sustainability_monitor.py  sustainability_report.py
backend/Capstone-backend/config/: base.yaml  development.yaml  production.yaml
backend/Capstone-backend/model_registry/: README.md  federated_best.pt  registry.json
backend/Capstone-backend/model_registry/credit_risk_rf/version_1/: model.pkl
backend/Capstone-backend/models/lightgbm/: lightgbm_model.txt  metadata.json
backend/Capstone-backend/tests/: README.md  test_backend_api_smoke.py  test_explainability_runtime.py  test_imports.py
backend/node_service/: package-lock.json  package.json  server.js
backend/node_service/models/: User.js
frontend/: extract.py  extracted_pdf.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: landing-page.tsx
frontend/src/app/auth/: login-page.tsx
frontend/src/app/dashboard/: overview.tsx
frontend/src/app/dashboard/analytics/: analytics-page.tsx
frontend/src/app/dashboard/explainability/: explainability-page.tsx
frontend/src/app/dashboard/federated/: federated-page.tsx
frontend/src/app/dashboard/prediction/: prediction-page.tsx
frontend/src/app/dashboard/security/: security-page.tsx
frontend/src/app/dashboard/settings/: settings-page.tsx
frontend/src/app/dashboard/sustainability/: sustainability-page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/auth/: auth-guard.tsx
frontend/src/components/layout/: dashboard-layout.tsx  sidebar.tsx  topbar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  drawer.tsx  dropdown-menu.tsx  logo.tsx
frontend/src/lib/: api-client.ts
frontend/src/store/: auth-store.ts
frontend/src/theme/: theme-provider.tsx
frontend/src/types/: api.ts
